--- a/front-end/src/Upload.css
+++ b/front-end/src/Upload.css
@@ -12,11 +12,12 @@
 }
 
 .container2 {
-  height: 350px;
+  height: 450px;
   width: 400px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.7);
 }
+
 .UploadImage {
   text-align: center;
   font-family: Spartan, monospace;
@@ -35,6 +36,10 @@
   width: 150px;
   height: 150px;
   object-fit: cover;
+  margin-left: 125px;
+  border: 3px solid #000;
+  border-radius: 5px;
+  margin-top: 20px;
 }
 #input[type="file"] {
   display: none;
@@ -86,6 +91,14 @@
   background: yellowgreen;
   opacity: 0.9;
   color: black;
+}
+
+.prediction {
+  background-color: yellowgreen;
+  padding: 5px;
+  text-align: center;
+  margin: 0 10px 0 10px;
+  border-radius: 3px;
 }
 
 .app {
