add- media queries for Home page

--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -13,6 +13,7 @@
   min-width: 100%;
   min-height: 100%;
   background-size: cover;
+  
 }
 
 .AppName {
@@ -21,7 +22,7 @@
   font-family: "Spartan", monospace;
   font-size: 74px;
   text-shadow: 3px 3px#ff812787;
-  margin-top: 40px;
+  margin-top: 10px;
   /* right: -8%; */
   margin-left: 80px;
 }
@@ -49,47 +50,96 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+nav{                                      /*Styling nav bar*/
+
+  background:black;
+  margin-top: -60px;
+  height: 145px;
+  opacity: 0.6;
+
 }
 
-.nav {
-  background-color: aquamarine;
+.logo {                                /*Css for website logo*/
+
+  width: 100px;
+  height: 100px;
+  margin: 30px 100px;
+  border-radius: 50%;
+
 }
 
-.nav-logo {
-  float: left;
-}
 
-.buttonNav {
+
+nav ul{
+  list-style: none;
   float: right;
-  margin-top: 40px;
+  position: relative;
+  top: 65px;
+  margin-top: 45px;
+
 }
 
-.btn-nav {
-  border: 1px solid rgb(252, 241, 210);
-  border-radius: 20px;
-  background: #4b340387;
-  padding: 10px;
-  font-size: 15px;
-  margin: 10px;
-  transition: 0.7s;
-  position: relative;
-  font-family: "IBM Plex Mono", monospace;
-  color: rgb(255, 255, 255);
-  overflow: hidden;
+nav ul li{
+  display: inline-block;
+  margin: -70px 50px 20px;
+  background: black;
+
 }
+
+nav:after{
+  clear: both;
+  display: table;
+  content: '';
+
+}
+nav ul li a{
+  color: white;
+  line-height: 30px;
+  font-size: 22px;
+  margin-top: -50px;
+  text-decoration: none;
+  padding: 8px 10px;
+
+}
+
+
+nav ul li a:hover{                      /*Adding hover effect to the nav */
+
+  color: cyan;
+  box-shadow: 0 0 5px #33ffff;
+}
+
+nav ul ul{
+  position: absolute;
+  top: -30px;
+  opacity: 0;
+  visibility: hidden;
+
+}
+
+nav ul li:hover > ul{
+  opacity: 1;
+  visibility: visible;
+}
+
+nav ul ul li{
+  position: relative;                       /* Setting properties of a relatively-positioned*/
+  margin: 33px -45px -10px;
+  width: 120px;
+  float: none;
+  display: list-item;
+
+}
+
 
 .buttonContainer {
   margin: auto;
 
+
   width: 440px;
-  margin-top: 200px;
+  margin-top: 25px;
 }
 
 .btn {
@@ -107,14 +157,92 @@
   overflow: hidden;
   margin: 1rem;
   margin-bottom: 1rem;
-
   top: 10px;
   align-content: flex-start;
   width: 400px;
+  
 }
 
 .btn:hover {
   background: rgb(236, 222, 184);
   opacity: 0.9;
   color: rgb(133, 75, 0);
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    background-image: url("assets/Coco\ Image\ background\ 3.png");
+    background-size: 1000px;
+    background-position-y: 120px;
+    background-position-x: -100px;
+
+    
+  
+}
+
+.AppName {
+  position: relative;
+  color: rgb(255, 255, 255);
+  font-family: "Spartan", monospace;
+  font-size: 54px;
+  text-shadow: 3px 3px#ff812787;
+  margin-top: 60px;
+  /* right: -8%; */
+  margin-left: 30px;
+}
+
+.Moto {
+  color: rgb(255, 255, 255);
+  font-family: "Spartan", monospace;
+  font-size: 15px;
+  margin-left: 88px;
+  margin-top: -25px;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.buttonContainer {
+  margin: auto;
+
+
+  width: 370px;
+  margin-top: 25px;
+}
+
+.btn {
+  border: 1px solid rgb(252, 241, 210);
+  border-radius: 20px;
+  background: #4b340387;
+  padding: 10px 10px;
+  font-size: 22px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: 0.7s;
+  position: relative;
+  font-family: "IBM Plex Mono", monospace;
+  color: rgb(255, 255, 255);
+  overflow: hidden;
+  margin: 1rem;
+  margin-bottom: 1rem;
+
+  top: 10px;
+  align-content: flex-start;
+  width: 350px;
+  
+}
+
+.btn:hover {
+  background: rgb(236, 222, 184);
+  opacity: 0.9;
+  color: rgb(133, 75, 0);
+}
 }
