--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -2,6 +2,77 @@
 @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,300;1,500&display=swap");
 
+
+
+
+  /*Nav Bar*/
+
+  .navbar {
+    background-color: black;
+    display: flex;
+    align-items: center;
+    opacity: 0.5;
+    font-size: 1.2rem;
+    font-display: 100px;
+    
+  }
+  
+  .nav-container {
+    width: 100%;
+    height: 110px;
+    max-width: 1500px;
+    
+  }
+  
+
+  
+  .nav-menu {
+    display: flex;
+    list-style: none;
+    text-align: center;
+  }
+  
+  .nav-links {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    height: 100%;
+    border-bottom: 3px solid transparent;
+  }
+  .fa-code {
+    margin-left: 1rem;
+  }
+  
+  .nav-item {
+    line-height: 40px;
+    margin-right: 1rem;
+  }
+  
+  .nav-item:after {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 0;
+    background: transparent;
+    transition: width 0.7s ease, background-color 0.5s ease;
+  }
+  
+  .nav-item:hover:after {
+    width: 100%;
+    background: white;
+  }
+  
+
+
+
+
+  
+ 
+  
+
+  /*Home page*/
+
+
 .con {
   background-color: white;
   color: black;
@@ -53,79 +124,6 @@ a:link {
   color: #61dafb;
 }
 
-nav {
-  /*Styling nav bar*/
-
-  background: black;
-  margin-top: -60px;
-  height: 145px;
-  opacity: 0.6;
-}
-
-.logo {
-  /*Css for website logo*/
-
-  width: 100px;
-  height: 100px;
-  margin: 30px 100px;
-  border-radius: 50%;
-}
-
-nav ul {
-  list-style: none;
-  float: right;
-  position: relative;
-  top: 65px;
-  margin-top: 45px;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: -70px 50px 20px;
-  background: black;
-}
-
-nav:after {
-  clear: both;
-  display: table;
-  content: "";
-}
-nav ul li a {
-  color: white;
-  line-height: 30px;
-  font-size: 22px;
-  margin-top: -50px;
-  text-decoration: none;
-  padding: 8px 10px;
-}
-
-nav ul li a:hover {
-  /*Adding hover effect to the nav */
-
-  color: cyan;
-  box-shadow: 0 0 5px #33ffff;
-}
-
-nav ul ul {
-  position: absolute;
-  top: -30px;
-  opacity: 0;
-  visibility: hidden;
-}
-
-nav ul li:hover > ul {
-  opacity: 1;
-  visibility: visible;
-}
-
-nav ul ul li {
-  position: relative; /* Setting properties of a relatively-positioned*/
-  margin: 33px -45px -10px;
-  width: 120px;
-  float: none;
-  display: list-item;
-}
-
 .buttonContainer {
   margin: auto;
 
@@ -159,7 +157,14 @@ nav ul ul li {
   color: rgb(133, 75, 0);
 }
 
+
+
+
 @media only screen and (max-width: 600px) {
+
+
+
+
   .content {
     background-image: url("assets/Coco\ Image\ background\ 3.png");
     background-size: 1000px;
