--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -9,21 +9,21 @@
 
   .navbar {
     background-color: black;
-    display: flex;
+    display:flex;
     align-items: center;
     opacity: 0.5;
     font-size: 1.2rem;
     font-display: 100px;
+    height: 100px;
+    margin-left: 1150px;
+    margin-top: 50px;
     
   }
   
-  .nav-container {
+  .navContainer {
     width: 100%;
-    height: 110px;
-    max-width: 1500px;
     
   }
-  
 
   
   .nav-menu {
@@ -39,13 +39,13 @@
     height: 100%;
     border-bottom: 3px solid transparent;
   }
-  .fa-code {
-    margin-left: 1rem;
-  }
+ 
   
   .nav-item {
     line-height: 40px;
     margin-right: 1rem;
+    
+    
   }
   
   .nav-item:after {
@@ -61,13 +61,7 @@
     width: 100%;
     background: white;
   }
-  
-
-
-
-
-  
- 
+   
   
 
   /*Home page*/
@@ -161,6 +155,20 @@ a:link {
 
 
 @media only screen and (max-width: 600px) {
+
+  .navbar {
+    background-color: black;
+    display:flex;
+    align-items: center;
+    opacity: 0.5;
+    font-size: 1.2rem;
+    margin-left: 70px;
+    
+  }
+  
+  
+
+
 
 
 
