--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -88,9 +88,9 @@ a:link {
   position: relative;
   color: rgb(255, 255, 255);
   font-family: "Spartan", monospace;
-  font-size: 74px;
+  font-size: 64px;
   text-shadow: 3px 3px#ff812787;
-  margin-top: 10px;
+  margin-top: -100px;
   margin-left: 80px;
 }
 
@@ -127,7 +127,7 @@ a:link {
 .btn {
   border: 1px solid rgb(252, 241, 210);
   border-radius: 20px;
-  background: #4b340387;
+  background: #f1e1be87;
   padding: 10px 10px;
   font-size: 27px;
   cursor: pointer;
@@ -137,9 +137,10 @@ a:link {
   font-family: "IBM Plex Mono", monospace;
   color: rgb(255, 255, 255);
   overflow: hidden;
-  margin: 1rem;
-  margin-bottom: 1rem;
-  top: 10px;
+  margin: 2rem;
+  margin-bottom: 2rem;
+  top: 80px;
+  right: 88%;
   align-content: flex-start;
   width: 400px;
 }
