--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -158,82 +158,105 @@ a:link {
 
   .navbar {
     background-color: black;
-    display:flex;
+    display: flex;
     align-items: center;
     opacity: 0.5;
     font-size: 1.2rem;
-    margin-left: 70px;
+    margin-left: 0%;
+    margin-top: 660px;
+    height: 80px;
+  }
+  .navContainer {
+    width: 100%;
+    height: 40px;
+    padding: 0px 40px 50px 20px;
+  }
+
+  
+  .nav-menu {
+    display: flex;
+    list-style: none;
+    text-align: center;
+  }
+  
+  .nav-links {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    height: 100%;
+    border-bottom: 3px solid transparent;
+  }
+ 
+  
+  .nav-item {
+    line-height: 40px;
+    margin-right: 1rem;
+    
     
   }
   
+  .nav-item:after {
+    content: "";
+    display: block;
+    height: 3px;
+    width: 0;
+    background: transparent;
+    transition: width 0.7s ease, background-color 0.5s ease;
+  }
   
-
-
-
-
+  .nav-item:hover:after {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    opacity: 0.5;
+  }
 
 
   .content {
-    background-image: url("assets/Coco\ Image\ background\ 3.png");
-    background-size: 1000px;
-    background-position-y: 120px;
-    background-position-x: -100px;
+    background-image: url("assets/Coco\ Image\ background\ 9.png");
+    background-size: 100%;
+    position: fixed;
   }
 
   .AppName {
     position: relative;
     color: rgb(255, 255, 255);
     font-family: "Spartan", monospace;
-    font-size: 54px;
+    font-size: 40px;
     text-shadow: 3px 3px#ff812787;
-    margin-top: 60px;
+    margin-top: -700px;
     /* right: -8%; */
-    margin-left: 30px;
+    margin-left: 5%;
   }
 
   .Moto {
     color: rgb(255, 255, 255);
     font-family: "Spartan", monospace;
     font-size: 15px;
-    margin-left: 88px;
-    margin-top: -25px;
-  }
-
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    margin-left: 6%;
+    margin-top: -20px;
   }
 
   .buttonContainer {
-    margin: auto;
-
-    width: 370px;
-    margin-top: 25px;
+    width: 250px;
+    margin-top: 20%;
+    margin-left: 15px;
   }
 
   .btn {
     border: 1px solid rgb(252, 241, 210);
     border-radius: 20px;
-    background: #4b340387;
-    padding: 10px 10px;
+    background: #f1e1be87;
+    padding: 10px 5px;
     font-size: 22px;
     cursor: pointer;
     text-decoration: none;
     transition: 0.7s;
     position: relative;
     font-family: "IBM Plex Mono", monospace;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.751);
     overflow: hidden;
-    margin: 1rem;
+    margin-left: 95%;
     margin-bottom: 1rem;
-
-    top: 10px;
     align-content: flex-start;
     width: 350px;
   }
