--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -8,65 +8,47 @@
   /*Nav Bar*/
 
   .navbar {
-    background-color: black;
+    position: fixed;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.500);
     display:flex;
     align-items: center;
-    opacity: 0.5;
     font-size: 1.2rem;
-    font-display: 100px;
-    height: 100px;
-    margin-left: 1150px;
-    margin-top: 50px;
+    font-display: 100%;
+    height: 180px;
+    margin-left: 5%;
+    margin-top: 5px;
     
   }
-  
-  .navContainer {
-    width: 100%;
-    
+  .spacer{
+    flex: .8;
   }
-
-  
   .nav-menu {
     display: flex;
-    list-style: none;
-    text-align: center;
+    margin-right: 10px;
+    opacity: 0.5;
   }
-  
-  .nav-links {
-    color: #fff;
+  .nav-links{
+    color: rgb(255, 255, 255);
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
     border-bottom: 3px solid transparent;
   }
- 
-  
-  .nav-item {
-    line-height: 40px;
-    margin-right: 1rem;
-    
-    
-  }
-  
   .nav-item:after {
-    content: "";
+    content: url();
     display: block;
     height: 3px;
     width: 0;
-    background: transparent;
+    background: rgb(255, 255, 255);
     transition: width 0.7s ease, background-color 0.5s ease;
   }
-  
   .nav-item:hover:after {
     width: 100%;
-    background: white;
+    background: rgb(211, 104, 104);
   }
-   
-  
 
   /*Home page*/
-
-
 .con {
   background-color: white;
   color: black;
@@ -85,21 +67,18 @@ a:link {
 }
 
 .AppName {
-  position: relative;
   color: rgb(255, 255, 255);
   font-family: "Spartan", monospace;
   font-size: 64px;
-  text-shadow: 3px 3px#ff812787;
-  margin-top: -100px;
-  margin-left: 80px;
+  text-shadow: 3.5px 3.5px#ff81278e;
 }
 
 .Moto {
   color: rgb(255, 255, 255);
   font-family: "Spartan", monospace;
   font-size: 22px;
-  margin-left: 88px;
-  margin-top: -40px;
+  margin-top: -30px;
+  margin-left: 2%;
 }
 
 .App-header {
@@ -139,7 +118,7 @@ a:link {
   overflow: hidden;
   margin: 2rem;
   margin-bottom: 2rem;
-  top: 80px;
+  top: 15rem;
   right: 88%;
   align-content: flex-start;
   width: 400px;
@@ -157,19 +136,20 @@ a:link {
 @media only screen and (max-width: 600px) {
 
   .navbar {
+    position: fixed;
     background-color: black;
     display: flex;
     align-items: center;
     opacity: 0.5;
     font-size: 1.2rem;
     margin-left: 0%;
-    margin-top: 660px;
-    height: 80px;
+    margin-top: 30%;
+    height: 40px;
   }
   .navContainer {
     width: 100%;
-    height: 40px;
-    padding: 0px 40px 50px 20px;
+    height: 100%;
+    padding: 0px 40px 40px 20px;
   }
 
   
@@ -180,7 +160,7 @@ a:link {
   }
   
   .nav-links {
-    color: #fff;
+    color: rgb(230, 243, 255);
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
@@ -223,8 +203,7 @@ a:link {
     font-family: "Spartan", monospace;
     font-size: 40px;
     text-shadow: 3px 3px#ff812787;
-    margin-top: -700px;
-    /* right: -8%; */
+    margin-top: 7%;
     margin-left: 5%;
   }
 
