--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -2,53 +2,49 @@
 @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,300;1,500&display=swap");
 
+/*Nav Bar*/
 
+.navbar {
+  position: fixed;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  font-display: 100%;
+  height: 155px;
+  margin-left: 5%;
+  margin-top: 5px;
+}
+.spacer {
+  flex: 0.8;
+}
+.nav-menu {
+  display: flex;
+  margin-right: 10px;
+  opacity: 0.7;
+}
+.nav-links {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+  border-bottom: 3px solid transparent;
+}
+.nav-item:after {
+  content: url();
+  display: block;
+  height: 3px;
+  width: 0;
+  background: rgb(255, 255, 255);
+  transition: width 0.7s ease, background-color 0.5s ease;
+}
+.nav-item:hover:after {
+  width: 100%;
+  background: rgb(211, 104, 104);
+}
 
-
-  /*Nav Bar*/
-
-  .navbar {
-    position: fixed;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.500);
-    display:flex;
-    align-items: center;
-    font-size: 1.2rem;
-    font-display: 100%;
-    height: 180px;
-    margin-left: 5%;
-    margin-top: 5px;
-    
-  }
-  .spacer{
-    flex: .8;
-  }
-  .nav-menu {
-    display: flex;
-    margin-right: 10px;
-    opacity: 0.5;
-  }
-  .nav-links{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
-    border-bottom: 3px solid transparent;
-  }
-  .nav-item:after {
-    content: url();
-    display: block;
-    height: 3px;
-    width: 0;
-    background: rgb(255, 255, 255);
-    transition: width 0.7s ease, background-color 0.5s ease;
-  }
-  .nav-item:hover:after {
-    width: 100%;
-    background: rgb(211, 104, 104);
-  }
-
-  /*Home page*/
+/*Home page*/
 .con {
   background-color: white;
   color: black;
@@ -130,11 +126,7 @@ a:link {
   color: rgb(133, 75, 0);
 }
 
-
-
-
 @media only screen and (max-width: 600px) {
-
   .navbar {
     position: fixed;
     background-color: black;
@@ -152,13 +144,12 @@ a:link {
     padding: 0px 40px 40px 20px;
   }
 
-  
   .nav-menu {
     display: flex;
     list-style: none;
     text-align: center;
   }
-  
+
   .nav-links {
     color: rgb(230, 243, 255);
     text-decoration: none;
@@ -166,15 +157,12 @@ a:link {
     height: 100%;
     border-bottom: 3px solid transparent;
   }
- 
-  
+
   .nav-item {
     line-height: 40px;
     margin-right: 1rem;
-    
-    
   }
-  
+
   .nav-item:after {
     content: "";
     display: block;
@@ -183,13 +171,12 @@ a:link {
     background: transparent;
     transition: width 0.7s ease, background-color 0.5s ease;
   }
-  
+
   .nav-item:hover:after {
     width: 100%;
     background: rgba(255, 255, 255, 0.5);
     opacity: 0.5;
   }
-
 
   .content {
     background-image: url("assets/Coco\ Image\ background\ 9.png");
