--- a/front-end/src/aboutUs.css
+++ b/front-end/src/aboutUs.css
@@ -1,3 +1,10 @@
+.wholepage{
+    background-color: black;
+    width: 100%;
+    height: 1800px;
+
+
+}
 .box{
     width:350px;
     height:400px;
@@ -5,11 +12,35 @@
     position:relative;
     transition:.3s;
     margin:70px;
+    margin-top: 300px;
 }
+.imgAbout1{
+    background-image: url(./assets/bhushitha.jpeg);
 
+}.imgAbout2{
+    background-image: url(./assets/nisandi.jpg);
+
+}.imgAbout3{
+    background-image: url(./assets/manodya.jpg);
+
+}.imgAbout4{
+    background-image: url(./assets/yojith.jpeg);
+
+}.imgAbout5{
+    background-image: url(./assets/denuwan.jpg);
+
+}
+.imgAbout6{
+    background-image: url(./assets/pasal.jpeg);
+
+}
+    
 .box img{
     width:100%;
-    height:100%;
+    height: 100%;
+    position: absolute;
+
+    
     transition:.3s;
     border-radius:4px;
 }
@@ -40,3 +71,4 @@
     opacity:1;
 
 }
+
