--- a/front-end/src/Gazette.css
+++ b/front-end/src/Gazette.css
@@ -1,14 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan&display=swap");
 
+.whole{
+    height: 1400px;
+    background-color: black;
+}
+
 .gazette{
-    background-image: url("assets/Coco\ Image\ background\ 2.png");
+    background-color: black;
     background-size: 100%;
-    position: fixed;
+    position: absolute;
+    background-color: black;
+
 }
 .gazette_desc{
-    position: relative;
-    color: rgb(0, 0, 0);
+    background-color: white;
+    height: 500px;
+    width: 2500px;
+    position: absolute;
+    color: wheat;
     font-family: "Spartan", monospace;
+    top: 150px;
+    padding-top: 70px;    background-color: black;
+
 }
 .gazetteheading{
     font-size: 34px;
@@ -17,5 +30,14 @@
 .gazettedescription{
     font-size: 20px;
 }
-/* .gazetteimg{
-} */
+.gazImg{
+    
+    background-image: url(./assets/coocnut\ retail\ price\ gazette.jpg);
+    position: absolute;
+    width: 730px;
+    height: 1000px;
+    margin-left: 400px;
+    border: black;
+    border-radius: 3px;
+    
+} 
