--- a/front-end/src/imagePreview.css
+++ b/front-end/src/imagePreview.css
@@ -13,10 +13,37 @@
 }
 .photocap {
   color: white;
+  background-color: black;
+  width: 500px;
+  border-radius: 15px;
+  margin-left: 550px;
+  border-color:azure;
 }
 .camBgImage{
-  background-image: url(./assets/Coco\ Image\ background.png);
+  background-image: url(./assets/Coco\ Image\ background\ 3.png);
   height: 722px;
   position: relative;
 
+}
+
+.btnPred{
+  width: 80px;
+    height: 25px;
+    margin: 10px;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px;
+    font-family: Spartan, monospace;
+    font-weight: 900;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.7s;
+    background-color:black;
+}
+
+  
+.btnPred:hover {
+  background: yellowgreen;
+  opacity: 0.9;
+  color: rgba(0, 0, 0, 0.808);
 }
