--- a/front-end/src/Gazette.css
+++ b/front-end/src/Gazette.css
@@ -9,18 +9,17 @@
     background-color: black;
     background-size: 100%;
     position: absolute;
-    background-color: black;
-
 }
 .gazette_desc{
     background-color: white;
-    height: 500px;
+    height: 1200px;
     width: 2500px;
     position: absolute;
     color: wheat;
     font-family: "Spartan", monospace;
     top: 150px;
-    padding-top: 70px;    background-color: black;
+    padding-top: 70px;
+    background-color: rgb(0, 0, 0);
 
 }
 .gazetteheading{
