--- a/front-end/src/Upload.css
+++ b/front-end/src/Upload.css
@@ -121,7 +121,10 @@
 }
 
 .prediction{
-  background-color: tan;
+  text-align: center;
+  border-radius: 8px;
+  margin-bottom: 5px;
+  background-color: rgb(26, 226, 149);
 }
 
 @media only screen and (max-width: 600px) {
@@ -244,7 +247,3 @@
   }
 }
 
-.prediction {
-  margin: 0 0 0 20px;
-  background-color: aqua;
-}
