--- a/front-end/src/Pricing.css
+++ b/front-end/src/Pricing.css
@@ -60,62 +60,70 @@
 
 @media only screen and (max-width: 600px) {
     .priceCategories{
-        background-image: url("assets/Coco\ Image\ background.png");
-        position: fixed;
-        min-width: 100%;
-        min-height: 100%;
-        background-size: cover;
-    }
-    
-    .table{
-        background-color: rgba(250, 250, 250, 0.397);
-        border-radius: 20px;
+        position: absolute;
+        background-image: url("assets/Coco\ Image\ background\ 23.png");
+        height: 700px;
         align-items: center;
-        position: relative;
+        background-color: teal;
+        background-size: cover;
+        justify-content: center;
+    }
+    .table{
+        background-color: rgba(250, 250, 250, 0.782);
+        border-radius: 17px;
+        max-width: 370px;
+        align-items: center;
+        position: absolute;
         font-family: "Spartan", monospace;
-        margin-top: 100px;
-        margin-left: 500px;
-        border-spacing: 8px;
+        margin-top: 120px;
+        margin-left: 30px;
+        border-spacing: 3px;
     }
     #tableheadsize{
-        padding: 10px;
+        padding: 5px;
+        font-weight: bold;
         color: rgb(26, 16, 16);
-        font-size: 24px;
+        font-size: 18px;
         text-shadow: 2px 1px#f0823387;
     }
     #tableheadprice{
-        padding: 10px;
+        padding: 5px;
+        font-weight: bold;
         color: rgb(26, 16, 16);
-        font-size: 24px;
+        font-size: 18px;
         text-shadow: 2px 1px#f0823387;
     }
     #tablecat{
-        font-size: 20px;
-        text-shadow: 0.5px 0.5px#5f7ec087;
+        padding: 5px;
+        font-weight: bold;
+        font-size: 15px;
+        text-shadow: 0.5px 0.5px#5f7ec0da;
         color: #000000c2;
         padding-right: 50px;
     }
     #tableprice{
-        font-size: 20px;
-        color: #ad1010c2;
+        padding: 5px;
+        font-weight: bold;
+        font-size: 16px;
+        color: #ad1010de;
         padding-left: 10px;
     }
     .pricingpagename{
-        position: relative;
+        width: 400px;
         color: rgb(255, 255, 255);
         font-family: "Spartan", monospace;
-        font-size: 44px;
+        font-size: 34px;
         text-shadow: 3px 1.5px#ff6c098f;
-        margin-top: 30px;
-        margin-left: 70px;
+        margin-top: 20px;
+        margin-left: 10px;
     }
     .pricingdescription{
-        position: relative;
+        width: 400px;
         color: rgb(255, 255, 255);
         font-family: "Spartan", monospace;
-        font-size: 24px;
+        font-size: 16px;
         text-shadow: 2px 1px#ff6c098f;
-        margin-top: 5px;
-        margin-left: 70px;
+        margin-top: 25px;
+        margin-left: 10px;
     }
 }
