--- a/front-end/src/Upload.css
+++ b/front-end/src/Upload.css
@@ -24,7 +24,6 @@
   font-family: Spartan, monospace;
   margin-top: 2rem;
   font-weight: bold;
-  /* border: 2px solid #000; */
   border-radius: 5px;
   margin-top: 20px;
 }
@@ -121,10 +120,13 @@
 }
 
 .prediction{
+  font-weight: bold;
+  font-size: 17px;
   text-align: center;
+  padding: 1px;
   border-radius: 8px;
   margin-bottom: 5px;
-  background-color: rgb(26, 226, 149);
+  background-color: rgb(255, 155, 5);
 }
 
 @media only screen and (max-width: 600px) {
@@ -237,8 +239,8 @@
 
   .app__container {
     margin-top: 10px;
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 400px;
     border: 1px solid #000;
   }
 
