--- a/front-end/src/Gazette.css
+++ b/front-end/src/Gazette.css
@@ -40,3 +40,69 @@
     border-radius: 3px;
     
 } 
+
+@media only screen and (max-width: 600px) {
+    
+    .whole{
+        height: 100vh;
+        background-color: black;
+        align-items: center;
+        background-size: 100%;
+        position: initial;
+        justify-content: center;
+    }
+      
+    .UploadImage {
+        text-align: center;
+        font-family: Spartan, monospace;
+        margin-top: 2rem;
+        font-weight: bold;
+        /* border: 2px solid #000; */
+        border-radius: 5px;
+        margin-top: 20px;
+      }
+    .gazette{
+        background-color: black;
+        background-size: 100%;
+        position: absolute;text-align: center;
+        font-family: Spartan, monospace;
+        margin-top: 2rem;
+        font-weight: bold;
+        /* border: 2px solid #000; */
+        border-radius: 5px;
+        margin-top: 20px;
+    }
+    .gazette_desc{
+        background-color: white;
+        height: 1200px;
+        width: 2500px;
+        position: absolute;
+        color: wheat;
+        font-family: "Spartan", monospace;
+        top: 150px;
+        padding-top: 70px;
+        background-color: rgb(0, 0, 0);
+    
+    }
+    .gazetteheading{
+        font-size: 30px;
+        text-shadow: 1px 1px#ce80498e;
+    }
+    .gazettedescription{
+        font-size: 20px;
+    }
+    .gazImg{
+        
+        background-image: url(./assets/coocnut\ retail\ price\ gazette.jpg);
+        position: absolute;
+        width: 730px;
+        height: 1000px;
+        margin-left: 400px;
+        border: black;
+        border-radius: 3px;
+        
+    } 
+    
+  }
+  
+  
