--- a/front-end/src/Gazette.css
+++ b/front-end/src/Gazette.css
@@ -18,6 +18,7 @@
     color: wheat;
     font-family: "Spartan", monospace;
     top: 150px;
+    margin-left: 20px;
     padding-top: 70px;
     background-color: rgb(0, 0, 0);
 
