Add - final edit

--- a/front-end/src/Gazette.css
+++ b/front-end/src/Gazette.css
@@ -1,19 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan&display=swap");
 
 .whole{
-    height: 1400px;
     background-color: black;
+    width: 100%;
+    height: 1800px;
 }
 
 .gazette{
     background-color: black;
     background-size: 100%;
-    position: absolute;
 }
 .gazette_desc{
     background-color: white;
     height: 1200px;
-    width: 2500px;
+    width: 100%;
     position: absolute;
     color: wheat;
     font-family: "Spartan", monospace;
@@ -29,6 +29,7 @@
 }
 .gazettedescription{
     font-size: 20px;
+    padding: 2px;
 }
 .gazImg{
     
@@ -45,38 +46,26 @@
 @media only screen and (max-width: 600px) {
     
     .whole{
-        height: 100vh;
-        background-color: black;
-        align-items: center;
-        background-size: 100%;
-        position: initial;
-        justify-content: center;
+        
+    background-color: black;
+    width: 730px;
+    height: 1500px;
     }
-      
-    .UploadImage {
+    .gazette{
+        background-color: black;
+        background-size: 100%;
+        position: absolute;
         text-align: center;
         font-family: Spartan, monospace;
         margin-top: 2rem;
         font-weight: bold;
-        /* border: 2px solid #000; */
         border-radius: 5px;
-        margin-top: 20px;
-      }
-    .gazette{
-        background-color: black;
-        background-size: 100%;
-        position: absolute;text-align: center;
-        font-family: Spartan, monospace;
-        margin-top: 2rem;
-        font-weight: bold;
-        /* border: 2px solid #000; */
-        border-radius: 5px;
-        margin-top: 20px;
+        margin-top: -80px;
     }
     .gazette_desc{
         background-color: white;
         height: 1200px;
-        width: 2500px;
+        width: 700px;
         position: absolute;
         color: wheat;
         font-family: "Spartan", monospace;
@@ -93,12 +82,11 @@
         font-size: 20px;
     }
     .gazImg{
-        
         background-image: url(./assets/coocnut\ retail\ price\ gazette.jpg);
         position: absolute;
         width: 730px;
         height: 1000px;
-        margin-left: 400px;
+        margin-left: -365px;
         border: black;
         border-radius: 3px;
         
