--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -127,6 +127,13 @@ a:link {
   color: rgb(133, 75, 0);
 }
 
+.footer{
+  font-weight: bold;
+  margin-top: 310px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 @media only screen and (max-width: 600px) {
   .navbar {
     position: fixed;
