--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -129,6 +129,12 @@ a:link {
   opacity: 0.9;
   color: rgb(133, 75, 0);
 }
+.footer{
+  font-weight: bold;
+  margin-top: 310px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
 
 
 
