--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -4,10 +4,10 @@
 
 /*Nav Bar*/
 
+
 .navbar {
   position: fixed;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   font-size: 1.2rem;
@@ -20,7 +20,10 @@
   flex: 0.8;
 }
 .nav-menu {
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
+  align-items: center;
+  height:80px ;
   margin-right: 10px;
   opacity: 0.7;
   
@@ -28,7 +31,7 @@
 .nav-links {
   color: rgb(255, 255, 255);
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   height: 100%;
   border-bottom: 3px solid transparent;
 }
@@ -95,7 +98,6 @@ a:link {
 
 .buttonContainer {
   margin: auto;
-
   width: 440px;
   margin-top: 25px;
 }
@@ -110,7 +112,8 @@ a:link {
   text-decoration: none;
   transition: 0.7s;
   position: relative;
-  font-family: "IBM Plex Mono", monospace;
+  font-family:  "Spartan", monospace;
+  font-weight: bold;
   color: rgb(255, 255, 255);
   overflow: hidden;
   margin: 2rem;
@@ -133,22 +136,15 @@ a:link {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-.footer{
-  font-weight: bold;
-  margin-top: 310px;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
-}
+
 
 @media only screen and (max-width: 600px) {
   .navbar {
     position: fixed;
-    background-color: black;
-    display: flex;
+    width: 100%;
     align-items: center;
-    opacity: 0.5;
     font-size: 1.2rem;
-    margin-left: 0%;
+    margin-left: 3%;
     margin-top: 30%;
     height: 40px;
   }
@@ -159,6 +155,9 @@ a:link {
   }
 
   .nav-menu {
+    background-color:  rgba(0, 0, 0, 0.5);
+    margin-top: -100px;
+    margin-left: -330px;
     display: flex;
     list-style: none;
     text-align: center;
@@ -166,20 +165,16 @@ a:link {
 
   .nav-links {
     color: rgb(230, 243, 255);
-    text-decoration: none;
     padding: 0.5rem 1rem;
-    height: 100%;
     border-bottom: 3px solid transparent;
   }
 
   .nav-item {
     line-height: 40px;
-    margin-right: 1rem;
     
   }
 
   .nav-item:after {
-    content: "";
     display: block;
     height: 3px;
     width: 0;
@@ -201,19 +196,20 @@ a:link {
 
   .AppName {
     position: relative;
+    width: max-content;
     color: rgb(255, 255, 255);
     font-family: "Spartan", monospace;
     font-size: 40px;
     text-shadow: 3px 3px#ff812787;
-    margin-top: 7%;
-    margin-left: 5%;
+    margin-top: 0px;
+    margin-left: 10px;
   }
 
   .Moto {
     color: rgb(255, 255, 255);
     font-family: "Spartan", monospace;
     font-size: 15px;
-    margin-left: 6%;
+    margin-left: 15px;
     margin-top: -20px;
   }
 
