--- a/front-end/src/Pricing.css
+++ b/front-end/src/Pricing.css
@@ -57,6 +57,13 @@
     margin-top: 5px;
     margin-left: 70px;
 }
+.footer{
+    font-weight: bold;
+    margin-top: 280px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  
 
 @media only screen and (max-width: 600px) {
     .priceCategories{
