--- a/front-end/src/Upload.css
+++ b/front-end/src/Upload.css
@@ -41,8 +41,8 @@
   width: 250px;
   height: 250px;
   object-fit: cover;
-  margin-top: 7%;
-  margin-left: 25%;
+  margin-top: 5%;
+  margin-left: 24%;
   align-items: center;
 }
 
@@ -52,7 +52,7 @@
 
 .label {
   width: 100%;
-  margin-top: 1rem;
+  margin-top: -5px;
   display: flex;
   justify-content: center;
 }
@@ -60,7 +60,7 @@
 .image-upload {
   width: 300px;
   height: 50px;
-  margin-top: 5px;
+  margin-top: 15px;
   padding: 8px 15px;
   font-family: Spartan, monospace;
   font-weight: 900;
@@ -90,7 +90,7 @@
   text-align: center;
   cursor: pointer;
   transition: 0.7s;
-  margin-top: 40px;
+  margin-top: 25px;
   margin-left: 42%;
   background-color: rgba(110, 14, 14, 0.651);
 }
@@ -128,6 +128,14 @@
   margin-bottom: 5px;
   background-color: rgb(255, 155, 5);
 }
+.helper_upload{
+  background-color: rgba(222, 184, 165, 0.573);
+  text-align: center;
+  font-family: Spartan, monospace;
+  font-weight: 500;
+  border-radius: 40px;
+  padding: 0px 5px 0px 5px;;
+}
 
 @media only screen and (max-width: 600px) {
   .WholePage {
@@ -152,7 +160,6 @@
     font-family: Spartan, monospace;
     margin-top: 2rem;
     font-weight: bold;
-    /* border: 2px solid #000; */
     border-radius: 5px;
     margin-top: 20px;
   }
@@ -171,7 +178,7 @@
     height: 200px;
     object-fit: cover;
     align-items: center;
-    margin-top: 20%;
+    margin-top: 10%;
     margin-left: 21.5%;
   }
 
@@ -181,7 +188,7 @@
 
   .label {
     width: 100%;
-    margin-top: 1rem;
+    margin-top : 5px;;
     display: flex;
     justify-content: center;
   }
@@ -190,7 +197,7 @@
     width: 300px;
     height: 50px;
     margin-top: 5px;
-    padding: 8px 15px;
+    padding: 4px 15px;
     font-family: Spartan, monospace;
     font-weight: 900;
     color: white;
@@ -219,7 +226,7 @@
     text-align: center;
     cursor: pointer;
     transition: 0.7s;
-    margin-top: 70px;
+    margin-top: 10px;
     margin-left: 40%;
     background-color: rgba(110, 14, 14, 0.651);
   }
@@ -247,5 +254,7 @@
   .app__input {
     margin-top: 10px;
   }
+
+
 }
 
